deploy3.yml
apiVersion: app/v1
kind: apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  lables: app-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: sample-ctr 
        image: <Image>
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
