pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    zone: prod
    version: v1
spec:
  containers:
  - name: sample-ctr
    image: cloudadvocate/deploy:v1
    ports:
    - containerPort: 80
