ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress1
  labels:
    name: myingress1
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/carts"
        backend:
          service:
            name: svc1
            port:
              number: 80
      - pathType: Prefix
        path: "/productsnew"
        backend:
          service:
            name: svc2
            port:
              number: 80
